# shuttle_rs_blog_using_jwt_auth_rust

./: Cargo.toml  default.nix
src/: main.rs
web_server/: Cargo.toml
